--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://wwoj.github.io/airKiosk",
   "name": "airkiosk",
   "version": "0.1.0",
   "private": true,
@@ -23,13 +24,15 @@
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
-    "homepage": "https://wwoj.github.io/airKiosk",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+  
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    
+
   },
   "eslintConfig": {
     "extends": "react-app"
